kiki/src/examples/should_fail/clash_nonterminal_terminal_enum_name.kiki
start Qux

struct Qux

terminal Qux {
    $Num: isize
}
